[gd_scene load_steps=3 format=3 uid="uid://dg60fmrkhhol8"]

[ext_resource type="StyleBox" uid="uid://e5bltd1uh6qj" path="res://resources/themes/MenuFrame.tres" id="1_rn1jc"]
[ext_resource type="Script" uid="uid://buiqlm46hpl1m" path="res://scripts/scenes/ShuffleHand.gd" id="2_bxihg"]

[node name="ShuffleHand" type="Panel"]
custom_minimum_size = Vector2(384, 238)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 384.0
offset_top = 204.0
offset_right = -384.0
offset_bottom = -206.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
theme_override_styles/panel = ExtResource("1_rn1jc")
script = ExtResource("2_bxihg")
slide_speed = 0.5

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 179.0
offset_right = 352.0
offset_bottom = 226.0

[node name="ReshuffleButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Reshuffle (3)"

[node name="PlayButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
text = "Play"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 11.0
offset_right = 370.0
offset_bottom = 39.0
theme_override_font_sizes/font_size = 23
text = "Validate your units to start the game"
horizontal_alignment = 1

[node name="HandUnits" type="Control" parent="."]
anchors_preset = 0
offset_left = 16.0
offset_top = 51.0
offset_right = 368.0
offset_bottom = 179.0
